array.island.Island.scala.error
Compilation error:
Island:7: error: Int does not take parameters
  for(i<- 1 to num.length()){
                         ^